--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,7 +66,7 @@
       <div class="products-title common-title">выберите свой бургер</div>
       <div class="products-items">
           <div class="products-item" *ngFor="let product of productsData">
-              <div class="products-item-image"><img src="../assets/images/{{product.image}}" alt="burger"></div>
+              <div class="products-item-image"><img src="{{product.image}}" alt="burger"></div>
               <div class="products-item-title">{{product.title}}</div>
               <div class="products-item-text">{{product.text}}</div>
               <div class="products-item-extra">
@@ -75,7 +75,7 @@
                       <div class="products-item-weight">{{product.grams}} гр</div>
                   </div>
                   <div class="products-item-action">
-                      <button class="button product-button" (click)="scrollTo(order)">
+                      <button class="button product-button" (click)="scrollTo(order, product)">
                           <span>Заказать</span>
                           <span>
                           <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
@@ -95,12 +95,12 @@
 <section class="order" id="order" #order>
   <div class="container">
       <div class="order-title common-title">оформление заказа</div>
-      <img src="../assets/images/order_image.png" alt="order image" class="order-image">
+      <img src="../assets/images/order_image.png" alt="Burger in the box" class="order-image">
       <div class="order-form">
           <div class="order-form-text">Заполните все данные и наш менеджер свяжется с вами для подтверждения заказа</div>
           <div class="order-form-inputs" [formGroup]="form">
               <div class="order-form-input" [class]="{'error': form.get('order')?.invalid && (form.get('order')?.dirty || form.get('order')?.touched)}">
-                  <input type="text" placeholder="Ваш заказ" id="burger" formControlName="order">
+                  <input type="text" placeholder="Выберите товар в списке" id="burger" readonly formControlName="order">
               </div>
               <div class="order-form-input" [class]="{'error': form.get('name')?.invalid && (form.get('name')?.dirty || form.get('name')?.touched)}">
                   <input type="text" placeholder="Ваше имя" id="name" formControlName="name">
